set up services

--- a/HDMvcWebsite/Views/Home/Index.cshtml
+++ b/HDMvcWebsite/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-<div ng-controller="mainController">
+<div>
     <!-- angular templating -->
     <!-- this is where content will be injected -->
     <div ng-view></div>
