--- a/HDMvcWebsite/Views/Shared/_Layout.cshtml
+++ b/HDMvcWebsite/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
     <script src="~/app/controllers/mainController.js"></script>
     <script src="~/app/controllers/contactController.js"></script>
     <script src="~/app/controllers/aboutController.js"></script>
+    <script src="~/app/services/mainServices.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
