change to use Factory

--- a/HDMvcWebsite/app/views/home.html
+++ b/HDMvcWebsite/app/views/home.html
@@ -1,17 +1,8 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-    <base href="/">
-</head>
-<body>
+﻿
     <h1>Home page</h1>
     <p>{{message}}</p>
-    <a href="#" ng-click="runLoadingIcon()">get user</a>
+    <a href="#" ng-click="getUsers()">get user</a>
     <div ng-repeat="user in allUsers">
         <p>{{user.firstName}}</p>
     </div>
-
-
-</body>
-</html>
+    <p>{{status}}</p>
