--- a/HDMvcWebsite/Areas/Admin/Views/ManageAccount/Login.cshtml
+++ b/HDMvcWebsite/Areas/Admin/Views/ManageAccount/Login.cshtml
@@ -3,15 +3,17 @@
     <div class="container-fluid">
 
         <form class="form-signin">
-            <h2 class="form-signin-heading"><strong>THE</strong>KAMAREL</h2>
+            <h2 class="form-signin-heading"><strong>HD</strong>Management</h2>
             <div class="input-prepend">
-                <span class="add-on"><i class="icon-user"></i></span>
+                <span class="add-on">
+                    <i class="icon icon-user"></i>
+                </span>
                 <input type="text" placeholder="Username">
             </div>
             <div class="input-prepend">
-                <span class="add-on"><i class="icon-lock"></i></span>
+                <span class="add-on"><i class="icon icon-lock"></i></span>
                 <input type="password" placeholder="Password">
-                <a href="index.html"><span class="add-on" id="login"><i class="icon-arrow-right"></i></span></a>
+                <a href="index.html"><span class="add-on" id="login"><i class="fa fa-sign-in"></i></span></a>
             </div>
         </form>
 
