--- a/HDMvcWebsite/Content/Admin/Site.less
+++ b/HDMvcWebsite/Content/Admin/Site.less
@@ -1,4 +1,29 @@
 ﻿body {
+    background: #f3f3f3;
+    overflow-x: hidden;
+    position: relative;
+
+    .notifyCircle {
+        color: white;
+        border-radius: 12px;
+        -webkit-box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, .1);
+        box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, .1);
+        font: bold 11px/3px Helvetica, Verdana, Tahoma;
+        height: 8px;
+        left: 21px;
+        min-width: 8px;
+        padding: 6px 4px 0 4px;
+        position: absolute;
+        text-align: center;
+        text-shadow: 0 1px 0 rgba(0, 0, 0, .3);
+        top: -8px;
+        z-index: 99;
+    }
+
+    .red {
+        background-color: #FF4444;
+    }
+
     .login-group {
         .form-signin {
             max-width: 360px;
@@ -112,7 +137,7 @@
                 }
 
                 .fa fa-sign-in:before {
-                    content:"\f090";
+                    content: "\f090";
                 }
             }
         }
@@ -156,6 +181,113 @@
             border-bottom: 1px solid rgba(0, 0, 0, 0.2);
             -moz-transform: rotate(-45deg);
             -webkit-transform: rotate(-45deg);
+        }
+    }
+    /*.navbar-default {
+        background-color: #545A5F;
+        border-color: #e7e7e7;
+    }*/
+    .dashboard {
+        margin-top: 74px;
+
+        .title {
+            .icon {
+                display: block;
+                position: relative;
+                height: 83px;
+                margin-top: -23px;
+                overflow: hidden;
+
+                .icon-dashboard {
+                    font-size: 180px;
+                    opacity: 0.05;
+                    position: relative;
+                    top: -50px;
+                    display: inline-block;
+                }
+            }
+
+            .heading {
+                margin-top: -65px;
+
+                h1 {
+                    opacity: .08;
+                    margin-left: 210px;
+                    font-size: 60px;
+                    font-weight: 300;
+                    padding: 13px 0 12px 0;
+                    margin-top: -2px;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    display: inline-block;
+                    filter: alpha(opacity=08);
+                    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=08)";
+                    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=08);
+                }
+            }
+        }
+
+        .row-fluid {
+            margin-bottom: 30px;
+
+            ul.masterActions {
+                margin: 20px auto -10px auto;
+                text-align: center;
+
+                li {
+                    background-color: white;
+                    cursor: pointer;
+                    display: inline-block;
+                    height: 125px;
+                    margin: 0 30px 30px 0;
+                    padding: 10px;
+                    text-align: left;
+                    width: 125px;
+                    -webkit-box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, .3);
+                    box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, .3);
+                    position: relative;
+                    transition: all .2s linear;
+                    -webkit-transition: all .2s linear;
+
+                    i {
+                        font-size: 70px;
+                        margin: 0 0 20px 0px;
+                        display: block;
+                    }
+
+                    .fa-enveloperedText:before {
+                        content: "\f0e0";
+                    }
+
+                    p {
+                        font-size: 10px;
+                        line-height: 10px;
+                        text-transform: none;
+                    }
+
+                    h1, ul.masterActions li p {
+                        font-size: 12px;
+                        font-weight: normal;
+                        line-height: 12px;
+                        margin: 0;
+                        padding: 0;
+                        text-transform: uppercase;
+                    }
+
+                    .notifyCircle {
+                        border-radius: 15px;
+                        left: 130px;
+                        min-height: 13px;
+                        min-width: 15px;
+                        padding-top: 10px;
+                        top: -15px;
+                    }
+
+                    .redText {
+                        color: #FF4444;
+                    }
+                }
+            }
         }
     }
 }
