set up data access layer

--- a/HDMvcWebsite/Areas/Admin/Views/Home/Index.cshtml
+++ b/HDMvcWebsite/Areas/Admin/Views/Home/Index.cshtml
@@ -4,34 +4,30 @@
 <div class="row-fluid">
     <!-- ==================== MASTER ACTIONS LIST ==================== -->
     <ul class="masterActions">
-        <li class="active">
-            <i class="fa fa-envelope redText" style="margin-left: 0px;"></i>
+        <li>
+            <i class="fa fa-envelope redText"></i>
             <h1 class="redText">Check &amp; send</h1>
             <p>new messages</p>
-            <div class="notifyCircle red">12</div>
         </li>
         <li>
-            <i class="icon-ok-sign cyanText" style="margin-left: 0px;"></i>
+            <i class="fa fa-check-circle cyanText""></i>
             <h1 class="cyanText">Check &amp; add</h1>
             <p>new tasks</p>
-            <div class="notifyCircle cyan">3</div>
         </li>
         <li>
-            <i class="icon-shopping-cart greenText" style="margin-left: 0px;"></i>
+            <i class="fa fa-shopping-cart greenText"></i>
             <h1 class="greenText">Check &amp; manage</h1>
             <p>new orders</p>
-            <div class="notifyCircle green">254</div>
         </li>
         <li>
-            <i class="icon-bar-chart orangeText" style="margin-left: 0px;"></i>
+            <i class="fa fa-bar-chart orangeText" style="margin-left: 0px;"></i>
             <h1 class="orangeText">Check</h1>
             <p>statistics</p>
         </li>
         <li>
-            <i class="icon-inbox greyText" style="margin-left: 0px;"></i>
+            <i class="fa fa-cloud-upload greyText"></i>
             <h1 class="greyText">Check &amp; upload</h1>
             <p>new files</p>
-            <div class="notifyCircle grey">2</div>
         </li>
     </ul>
     <!-- ==================== END OF MASTER ACTIONS LIST ==================== -->
