--- a/HDMvcWebsite/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HDMvcWebsite/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Project name</a>
+                <a class="navbar-brand" href="#">HD project</a>
             </div>
             @*<div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -57,9 +57,12 @@
                 <h1>Dashboard</h1>
             </div>
         </div>
-
-        @RenderBody()
+        <div class="container-fluid">
+            @RenderBody()
+        </div>
     </div>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/admin")
     @RenderSection("scripts", required: false)
 </body>
 </html>
