--- a/HDMvcWebsite/Content/Admin/Site.less
+++ b/HDMvcWebsite/Content/Admin/Site.less
@@ -20,8 +20,28 @@
         z-index: 99;
     }
 
+    .greyText {
+        color: #616161;
+    }
+
+    .orangeText {
+        color: #FFBB33;
+    }
+
     .red {
         background-color: #FF4444;
+    }
+
+    .cyanText {
+        color: #33B5E5;
+    }
+
+    .redText {
+        color: #FF4444;
+    }
+
+    .greenText {
+        color: #99CC00;
     }
 
     .login-group {
@@ -238,26 +258,30 @@
                     background-color: white;
                     cursor: pointer;
                     display: inline-block;
-                    height: 125px;
+                    width: 145px;
+                    height: 145px;
                     margin: 0 30px 30px 0;
                     padding: 10px;
                     text-align: left;
-                    width: 125px;
                     -webkit-box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, .3);
                     box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, .3);
                     position: relative;
                     transition: all .2s linear;
                     -webkit-transition: all .2s linear;
+                    border: 1px solid transparent;
 
                     i {
                         font-size: 70px;
                         margin: 0 0 20px 0px;
                         display: block;
+                        margin-left: 0px;
+                        left: 0;
+                        -webkit-transition: all 0.4s ease-in-out;
+                        -moz-transition: all 0.4s ease-in-out;
+                        -o-transition: all 0.4s ease-in-out;
+                        transition: all 0.4s ease-in-out;
                     }
 
-                    .fa-enveloperedText:before {
-                        content: "\f0e0";
-                    }
 
                     p {
                         font-size: 10px;
@@ -274,17 +298,18 @@
                         text-transform: uppercase;
                     }
 
-                    .notifyCircle {
-                        border-radius: 15px;
-                        left: 130px;
-                        min-height: 13px;
-                        min-width: 15px;
-                        padding-top: 10px;
-                        top: -15px;
-                    }
-
                     .redText {
                         color: #FF4444;
+                    }
+                }
+
+                li:hover {
+                    outline: none;
+                    border: 1px solid #9ecaed;
+                    box-shadow: 0 0 10px #9ecaed;
+
+                    i {
+                        left: 30px;
                     }
                 }
             }
