--- a/HDMvcWebsite/Content/Admin/Site.less
+++ b/HDMvcWebsite/Content/Admin/Site.less
@@ -275,11 +275,11 @@
                         margin: 0 0 20px 0px;
                         display: block;
                         margin-left: 0px;
-                        left: 0;
+                        /*left: 0;
                         -webkit-transition: all 0.4s ease-in-out;
                         -moz-transition: all 0.4s ease-in-out;
                         -o-transition: all 0.4s ease-in-out;
-                        transition: all 0.4s ease-in-out;
+                        transition: all 0.4s ease-in-out;*/
                     }
 
 
@@ -308,9 +308,9 @@
                     border: 1px solid #9ecaed;
                     box-shadow: 0 0 10px #9ecaed;
 
-                    i {
+                    /*i {
                         left: 30px;
-                    }
+                    }*/
                 }
             }
         }
